feat: ship Natro Helper 59 live activity polish